--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,12 @@ PyMsgBox = "==1.0.6"
 PyScreeze = "==0.1.18"
 PyTweening = "==1.0.3"
 PyYAML = "==3.13"
+django = "*"
+django-rest-framework = "*"
+pymongo = "*"
+djagno-crispy-forms = "*"
+django-crispy-forms = "*"
+requests = "*"
 
 [requires]
 python_version = "3.7"
