--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,6 @@ pipenv = "==2018.11.26"
 portpicker = "==1.2.0"
 protobuf = "==3.6.1"
 s2clientprotocol = "==4.6.2.69232.0"
-sc2 = "==0.10.6"
 scipy = "==1.1.0"
 six = "==1.11.0"
 virtualenv = "==16.1.0"
@@ -39,6 +38,7 @@ django = "*"
 django-rest-framework = "*"
 pymongo = "*"
 requests = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
