--- a/Pipfile
+++ b/Pipfile
@@ -39,6 +39,7 @@ django-rest-framework = "*"
 pymongo = "*"
 requests = "*"
 django-cors-headers = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.7"
