--- a/Pipfile
+++ b/Pipfile
@@ -40,6 +40,7 @@ pymongo = "*"
 requests = "*"
 django-cors-headers = "*"
 gunicorn = "*"
+dj-database-url = "*"
 
 [requires]
 python_version = "3.7"
