--- a/Pipfile
+++ b/Pipfile
@@ -41,6 +41,7 @@ requests = "*"
 django-cors-headers = "*"
 gunicorn = "*"
 dj-database-url = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_version = "3.7"
