--- a/Pipfile
+++ b/Pipfile
@@ -42,6 +42,7 @@ django-cors-headers = "*"
 gunicorn = "*"
 dj-database-url = "*"
 psycopg2-binary = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.7"
